Fix: page content starts too low down

--- a/assets/styles/banner.css
+++ b/assets/styles/banner.css
@@ -1,6 +1,5 @@
 .ribbon {
-  padding-top: 1em;
-  padding-bottom: 1em;
+  padding: 0;
   margin-bottom: 1em;
   background: white;
   width: 100%;
@@ -60,6 +59,10 @@
   flex-flow: row;
   justify-content: space-between;
   gap: 1em;
+}
+
+#top-ribbon .content .copy > * {
+  margin-bottom: 1em;
 }
 
 #top-ribbon .content h1,
